--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "app.ts",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint --ext .js,.ts --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.ts --ignore-path .gitignore .",
+    "format": "eslint --fix --ext .js,.ts --ignore-path .gitignore ."
   },
   "engines": {
-    "node": "22"
+    "node": "24.10"
   },
   "devDependencies": {
-    "@tsconfig/node22": "^22",
+    "@tsconfig/node24": "^24",
     "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.12",
     "@types/node": "^24.10.2",
     "eslint": "^7.32.0",
@@ -18,6 +19,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "homey-zigbeedriver": "^2.2.3"
+    "homey-zigbeedriver": "^2.2.3",
+    "zigbee-clusters": "^2.6.0"
   }
 }
