--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "dk.denfrievilje.deviconnect",
   "version": "1.0.0",
-  "compatibility": ">=5.0.0",
+  "compatibility": ">=12.2.0",
   "sdk": 3,
   "brandColor": "#2A6495",
   "platforms": [
@@ -87,7 +87,8 @@
       "class": "heater",
       "capabilities": [
         "target_temperature",
-        "measure_temperature"
+        "measure_temperature",
+        "operational_state"
       ],
       "platforms": [
         "local"
